2002-10-08  Andras Varga

	* chead.h: removed deleteChildren() from cHead destructor call.

	* cobject.h: refactoring/simplification: removed deleteChildren() and 
	destructChildren() methods; dealloc(cObject *) renamed to discard().

2002-10-07  Andras Varga

	* macros.h, cobject.h: refactoring of internal workings: way of 
	constructing global registration lists (module types, networks, etc)
	have been reorganized. Now it uses a new EXECUTE_ON_STARTUP() macro
	instead of having hardwired into global objects' constructor to 
	join lists. As a consequence, cObject constructors could be simplified.

	* onstartup.h: new file, contains EXECUTE_ON_STARTUP() macro and 
	underlying object.

	* Interface() macro renamed to ModuleInterface() (name clashed with
	COM stuff on Windows); Register_Interface() macro renamed to 
	Register_ModuleInterface().

2002-10-04  Andras Varga

        * csimul.h: refactoring on cSimulation object:

	* incEventCount() removed, incrementing event count was moved into 
	doOneEvent()

	* responsibilities of startRun() and endRun() changed, see doc comment.

	* several methods moved from cSimulation into the Envir library: 
	timeLimit(), simTimeLimit(), startClock(), stopClock(), resetClock(), 
	checkTimes(). It is no longer the scheduler function's responsibility
	to stop the simulation if sim/real time limits have been reached

	* cexception.h changed

2002-09-07  Andras Varga

	* added cchannel.h: cChannel, cSimpleChannel introduced

	* cGate: added setChannel(), channel()
	
	* cGate: DEPRECATED setDelay(), setError(), setDatarate(), setLink()
	methods. Channel objects should be used instead.

	* cGate: added connectTo() method; DEPRECATED setFrom() and setTo()

	* cMessage: refactoring: added setSentFrom() and setArrival() methods 
	instead of letting friend classes manipulate private data members 
	of cMessage, and reduced friend class list.

	* cModule, cGate: deliver(cMessage*) changed to 